Many updates and bug fixes

--- a/views/locations/list.ejs
+++ b/views/locations/list.ejs
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Fishing Bakersfield | Locations</title>
-    <%- include ('partials/header') %>
-    <%- include ('partials/loginbar') %>
+    <%- include ('../partials/header') %>
+    <%- include ('../partials/loginbar') %>
     <br>
       <div class="container">
-        <%- include ('partials/message') %>
+        <%- include ('../partials/message') %>
         <!-- COLUMN TILES -->
         <div class="columns is-multiline is-centered">
           <div class="column is-12">
@@ -66,4 +66,4 @@
          </a>
        <% } %>
      </div>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
