--- a/views/partials/loginbar.ejs
+++ b/views/partials/loginbar.ejs
@@ -12,7 +12,7 @@
   <div class="block">
     <div class="notification is-info">
       <div class="buttons is-centered">
-        <a href="/dashboard" class="button is-link"><img src="/icons/user-circle-white.svg" class="svg-icon-small" />Dashboard</a>
+        <a href="/user/dashboard" class="button is-link"><img src="/icons/user-circle-white.svg" class="svg-icon-small" />Dashboard</a>
         <a href="/addcatch" class="button is-success"><img src="/icons/plus-white.svg" class="svg-icon-small" />Add Catch</a>
       </div>
     </div>
