Move EJS files into folders

--- a/views/general/login.ejs
+++ b/views/general/login.ejs
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Login - fishingBakersfield</title>
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 <div class="block">
       <div class="notification is-info">
         <p>Thanks for returning!</p>
       </div>
 </div>
 <div class="container">
-    <%- include('partials/message') %>
+    <%- include('../partials/message') %>
     <br>
     <div class="columns is-centered">
         <article class="message is-info">
@@ -44,4 +44,4 @@
         </article>
     </div>
 </div>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
