--- a/views/general/page-not-found.ejs
+++ b/views/general/page-not-found.ejs
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Not Found - fishingBakersfield</title>
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 <br>
-<%- include('partials/message') %>
+<%- include('../partials/message') %>
 <div class="container">
 <section class="hero is-info">
   <div class="hero-body">
@@ -20,4 +20,4 @@
   </div>
 </section>
 
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
