--- a/views/general/register.ejs
+++ b/views/general/register.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Register</title>
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 <div class="block">
       <div class="notification is-info">
         <p>Registering an account allows you to post your catches and share fishing tips with other anglers!</p>
@@ -10,7 +10,7 @@
 </div>
 <br>
 <div class="container">
-<%- include('partials/message') %>
+<%- include('../partials/message') %>
 <div id="errorCMsg" style="display: none">
   <article class="message is-warning" id="delete" style="margin-bottom: 1.5rem;">
     <div class="message-header">
@@ -70,4 +70,4 @@
     </article>
 </div>
 </div>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
