--- a/views/general/resources.ejs
+++ b/views/general/resources.ejs
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Bakersfield Fishing Links</title>
-      <%- include('partials/header') %>
-        <%- include('partials/loginbar') %>
+      <%- include('../partials/header') %>
+        <%- include('../partials/loginbar') %>
           <div class="container">
-            <%- include('partials/message') %>
+            <%- include('../partials/message') %>
               <div class="box">
                 <div class="content">
                   <h1><img src="/icons/link.svg" class="svg-icon-md"> Bakersfield Fishing Links</h1>
@@ -22,4 +22,4 @@
                 </div>
               </div>
           </div>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
