--- a/views/general/terms.ejs
+++ b/views/general/terms.ejs
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Terms & Conditions</title>
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 <br>
-<%- include('partials/message') %>
+<%- include('../partials/message') %>
 <div class="container">
   <a class="button" href="/register"><img src="/icons/arrow-left.svg" class="svg-icon-small">Register</a>
   <br>
@@ -91,4 +91,4 @@
              </article>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
