--- a/views/locations/add.ejs
+++ b/views/locations/add.ejs
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>New Location - fishingBakersfield</title>
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 <br>
-<%- include('partials/message') %>
+<%- include('../partials/message') %>
 <div class="container">
   <div class="columns is-centered">
     <article class="message is-info">
@@ -49,4 +49,4 @@
     </article>
   </div>
 </div>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
