--- a/views/posts/add.ejs
+++ b/views/posts/add.ejs
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Add New Catch</title>
-<%- include('partials/header') %>
-<%- include('partials/loginbar') %>
+<%- include('../partials/header') %>
+<%- include('../partials/loginbar') %>
 <div class="container">
 <a class="button" href="/addcatch"><img src="/icons/arrow-left.svg" class="svg-icon-small">Pick Location</a>
 <br>
@@ -84,4 +84,4 @@ function checkForFile(){
 }
 }
 </script>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
