--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>Edit My Catch - fishingBakersfield</title>
-<%- include('partials/header') %>
+<%- include('../partials/header') %>
 <div class="block">
       <div class="notification is-info">
         <p>Made a mistake? No worries, you can fix it here.</p>
       </div>
 </div>
-<%- include('partials/message') %>
+<%- include('../partials/message') %>
 <div class="container">
         <article class="message is-info">
             <div class="message-header">
@@ -50,4 +50,4 @@
 
 
 </div>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
