--- a/views/posts/list.ejs
+++ b/views/posts/list.ejs
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>fishingBakersfield | Feed</title>
-<%- include('partials/header') %>
-<%- include('partials/loginbar') %>
-<%- include('partials/message') %>
+<%- include('../partials/header') %>
+<%- include('../partials/loginbar') %>
+<%- include('../partials/message') %>
 <br>
     <div class="container">
       <div class="box">
@@ -111,4 +111,4 @@
         </nav>
         <% } %>
       </div>
-<%- include('partials/footer') %>
+<%- include('../partials/footer') %>
