--- a/views/partials/loginbar.ejs
+++ b/views/partials/loginbar.ejs
@@ -2,8 +2,8 @@
   <div class="block">
     <div class="notification is-info">
       <div class="buttons is-centered">
-        <a href="/login" class="button is-link"><img src="/icons/key-white.svg" class="svg-icon-small" />Login</a>
-        <a href="/register" class="button is-link"><img src="/icons/user-plus-white.svg" class="svg-icon-small" />Register</a>
+        <a href="/user/login" class="button is-link"><img src="/icons/key-white.svg" class="svg-icon-small" />Login</a>
+        <a href="/user/register" class="button is-link"><img src="/icons/user-plus-white.svg" class="svg-icon-small" />Register</a>
       </div>
     </div>
   </div>
