NPM Audit and bug fixes

--- a/views/general/login.ejs
+++ b/views/general/login.ejs
@@ -17,7 +17,7 @@
                 <p>Login:</p>
             </div>
         <div class="message-body">
-            <form action="/login" method="POST">
+            <form action="/user/login" method="POST">
                 <div class="field">
                     <label class="label">Username</label>
                         <div class="control has-icons-left">
