--- a/views/posts/add.ejs
+++ b/views/posts/add.ejs
@@ -8,7 +8,7 @@
 <a class="button" href="/addcatch"><img src="/icons/arrow-left.svg" class="svg-icon-small">Pick Location</a>
 <br>
 <br>
-<%- include('partials/message') %>
+<%- include('../partials/message') %>
 <div id="errorIMsg" style="display: none">
   <article class="message is-warning" id="delete" style="margin-bottom: 1rem;">
     <div class="message-header">
